@@ -37,8 +37,11 @@
 
 <p>2021-12-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
-* www/download.rst: Add documentation for how to validate
-downloaded files.</blockquote>
+<p>* configure.ac: Search for a GnuPG 'gpg' program.</p>
+<p>* Makefile.am (snapshot): Add support for PGP-signed snapshots.</p>
+<p>* www/download.rst: Add documentation for how to validate
+downloaded files.</p>
+</blockquote>
 <p>2021-12-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* version.sh: Update shared library versioning information for
